# AutoYara

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
configs/: config.py  config.yaml  config.yaml.example
configs/templates/: meta_example.json  metadata.json.j2  yara_rule.j2
data/processed/: hello.i64
data/processed/CVE-2025-38095/: CVE-2025-38095.json  CVE-2025-38095.yara
docs/: coding-standards.md  project-structure.md
output/: cve_report.md  top10_2026_02.md
scripts/: check_result.py  gen_report.py  recheck_report.py  rerun_single_cve.py  run_agent_real.py  run_all.py  run_bulletin_month.py  run_ida_extract_hex.py  run_ida_server.py  run_single_commit.py  run_stages.py  run_top10_503.py  run_top10_feb.py  test_agent_mock.py  test_llm.py  test_validation.py
src/autoyara/: __init__.py  config.py  runtime_logger.py
src/autoyara/ReAct/: __init__.py  agent.py  internal_types.py
src/autoyara/collector/: __init__.py
src/autoyara/collectors/: README.md  __init__.py  analysis.py  diff_utils.py  discovery.py  gitee_pr.py  http_client.py  internal_types.py  orchestrate.py  patch_fetcher.py  runtime_config.py
src/autoyara/generation/: .gitkeep  __init__.py  generate_json.py  generate_yara.py
src/autoyara/ida/: README.md  mcptools.py  server.py
src/autoyara/llm/: README.md  __init__.py  async_client.py  quality_check.py  response_parser.py  sync_client.py
src/autoyara/models/: __init__.py  pipeline_models.py
tests/: test_extract_function.py  test_ida.py  test_llm.py  test_llm_response_parser.py
(+15 files in other folders)
